fix text-align

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -112,6 +112,7 @@
             position: relative;
             margin-right: 5em;
             height: 65px;
+            text-align: left;
             
             @include phone {
                 margin: 0 0;
